[package]
name = "api_gateway_actix"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-web-validator = "7.0.0"
dotenvy = "0.15.7"
futures = "0.3.31"
lapin = "3.6.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
